fix(divided frames): fix spanish answer text spacing in tables

--- a/Content/Styles/DividedFrames/Site.scss
+++ b/Content/Styles/DividedFrames/Site.scss
@@ -125,6 +125,10 @@ html, body {
   padding: 2px;
 }
 
+.answerContainer .spanish-answer {
+  margin: 0;
+}
+
 .tableItem{
   border:3px solid black;
 }
